clusters/casper/production/kipp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kipp
  namespace: production
spec:
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: kipp
  template:
    metadata:
      labels:
        app: kipp
    spec:
      containers:
      - name: kipp
        image: uhthomas/kipp@sha256:06d6bc804e63fac1f5e83229a96a648b1b98106b85140b727f29f784637e888a
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        args: [
          "--database", "$(DATABASE)",
          "--filesystem", "s3://fr-par/kipp?endpoint=s3.fr-par.scw.cloud",
          "--lifetime", "0"
        ]
        resources:
          requests:
            memory: 16Mi
            cpu: 150m
          limits:
            memory: 64Mi
            cpu: 400m
        volumeMounts:
        - name: kipp
          mountPath: /aws-config
          readOnly: true
          subPath: aws-config
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
      volumes:
      - name: kipp
        secret:
          secretName: kipp
