clusters/casper/production/kipp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kipp
  namespace: production
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: kipp
